:bug: fix font missing on mobile

--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -5,7 +5,7 @@
 }
 
 .container h5 {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'sans-serif';
   line-height: 1.75rem;
   margin-top: 0;
 }
